src/test/ui/associated-type-bounds/issue-83017.stderr
error[E0277]: the trait bound `for<'a, 'b> <Z as TraitA<'a>>::AsA: TraitB<'a, 'b>` is not satisfied
  --> $DIR/issue-83017.rs:36:5
   |
LL | fn foo<T>()
   |    --- required by a bound in this
LL | where
LL |     for<'a> T: TraitA<'a, AsA: for<'b> TraitB<'a, 'b, AsB: for<'c> TraitC<'a, 'b, 'c>>>,
   |                                ------------------------------------------------------- required by this bound in `foo`
...
LL |     foo::<Z>();
   |     ^^^^^^^^ the trait `for<'a, 'b> TraitB<'a, 'b>` is not implemented for `<Z as TraitA<'a>>::AsA`

error[E0277]: the trait bound `for<'a, 'b, 'c> <<Z as TraitA<'a>>::AsA as TraitB<'a, 'b>>::AsB: TraitC<'a, 'b, 'c>` is not satisfied
  --> $DIR/issue-83017.rs:36:5
   |
LL | fn foo<T>()
   |    --- required by a bound in this
LL | where
LL |     for<'a> T: TraitA<'a, AsA: for<'b> TraitB<'a, 'b, AsB: for<'c> TraitC<'a, 'b, 'c>>>,
   |                                                            -------------------------- required by this bound in `foo`
...
LL |     foo::<Z>();
   |     ^^^^^^^^ the trait `for<'a, 'b, 'c> TraitC<'a, 'b, 'c>` is not implemented for `<<Z as TraitA<'a>>::AsA as TraitB<'a, 'b>>::AsB`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
